# mbari_wec_gz

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md
buoy_description/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
buoy_description/hooks/: buoy_description.dsv.in
buoy_description/meshes/: pto_collision.stl
buoy_description/models/buoy/: model.config  model.sdf
buoy_description/models/mbari_wec/: model.config  model.sdf  model.sdf.em
buoy_description/models/mbari_wec_base/: model.config  model.sdf.em
buoy_description/models/mbari_wec_ros/: model.config  model.sdf
buoy_description/scripts/: compute_polytropic.py
buoy_gazebo/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
buoy_gazebo/gazebo/: server.config
buoy_gazebo/hooks/: buoy_gazebo.dsv.in
buoy_gazebo/launch/: bridge_pto.launch.py  bridge_spring.launch.py  buoy.launch.py  debugger.launch.py  electrohydraulic_pto.launch.py  mbari_wec.launch.py  mbari_wec_batch.launch.py  mbari_wec_debugger.launch.py  mbari_wec_sinusoidal.launch.py  pto_bridge.launch.py  rviz.launch.py  spring_bridge.launch.py  wavebodyinteractions.launch.py
buoy_gazebo/rviz/: mbari_wec.rviz
buoy_gazebo/scripts/: example_sim_params.yaml  mbari_wec_batch
buoy_gazebo/src/: ElectroHydraulicSoln.hh  PTO_ElectroHydraulicState.hh  PolytropicPneumaticSpring.cc  PolytropicPneumaticSpring.hh  ProtoElectroHydraulicPTO.cc  ProtoElectroHydraulicPTO.hh  ProtoPneumaticSpring.cc  ProtoPneumaticSpring.hh
buoy_gazebo/src/ElectroHydraulicPTO/: BatteryState.hpp  CMakeLists.txt  ElectroHydraulicLoss.hpp  ElectroHydraulicPTO.cc  ElectroHydraulicPTO.cpp  ElectroHydraulicPTO.hh  ElectroHydraulicPTO.hpp  ElectroHydraulicSoln.hh  ElectroHydraulicSoln.hpp  ElectroHydraulicState.hh  ElectroHydraulicState.hpp  JustInterp.hpp  WindingCurrentTarget.hh  WindingCurrentTarget.hpp
buoy_gazebo/src/FreeSurfaceHydrodynamics/: CMakeLists.txt  CMakeLists_colcon.txt  CMakeLists_local.txt  Doxyfile.in  FS_Hydrodynamics.cpp  FS_Hydrodynamics.hpp  IncidentWave.hpp  LinearIncidentWave.cpp  LinearIncidentWave.hpp  PlotEta.m  README.dox  Test_FS_Hydrodynamics.cpp  Test_IncidentWave.cpp  Test_IncidentWave_Peters.cpp  WaveBodyInteractions.cpp  WaveBodyInteractions.hpp  interp1d.cpp  interp1d.hpp  mlinterp.hpp
buoy_gazebo/src/HydraulicPneumaticFriction/: CMakeLists.txt  HydraulicPneumaticFriction.cpp  HydraulicPneumaticFriction.hpp
buoy_gazebo/src/IncidentWaves/: CMakeLists.txt  IncWaveState.hpp  IncidentWaves.cpp  IncidentWaves.hpp
buoy_gazebo/src/MooringForce/: CMakeLists.txt  CatenarySoln.hpp  MooringForce.cpp  MooringForce.hpp
buoy_gazebo/src/PTOFriction/: CMakeLists.txt  PTOFriction.cpp  PTOFriction.hpp
buoy_gazebo/src/PneumaticSpring/: CMakeLists.txt  PneumaticSpring.cc  PneumaticSpring.hh
buoy_gazebo/src/PolytropicPneumaticSpring/: CMakeLists.txt  PolytropicPneumaticSpring.cc  PolytropicPneumaticSpring.cpp  PolytropicPneumaticSpring.hh  PolytropicPneumaticSpring.hpp  SpringState.hpp
buoy_gazebo/src/SinusoidalPiston/: CMakeLists.txt  SinusoidalPiston.cpp  SinusoidalPiston.hpp
buoy_gazebo/src/SpringController/: CMakeLists.txt
buoy_gazebo/src/WaveBodyInteractions/: CMakeLists.txt  WaveBodyInteractions.cpp  WaveBodyInteractions.hpp  todo.md
buoy_gazebo/src/buoy_utils/: CMakeLists.txt  CommandTriState.hpp  Constants.hpp  Interp1d.cpp  Interp1d.hpp  Rate.hpp  (+7 more)
buoy_gazebo/test/: test_hydraulic_pneumatic_friction.cpp  test_pto_friction.cpp  test_stopwatch.cpp
buoy_gazebo/worlds/: buoy_no_plugins.sdf  buoy_playground.sdf  electrohydraulicPTO.sdf  heave_cone_hydrodynamics.sdf  mbari_wec.sdf  mbari_wec.sdf.em  mbari_wec_sinusoidal_piston.sdf  pneumatic_spring.sdf  proto_electrohydraulicPTO.sdf  proto_pneumatic_spring.sdf  singlefloatingbody.sdf  test_heave_cone_model.sdf  test_mbari_wec_model.sdf  test_viscous_drag.sdf  wavebodyinteractions.sdf
buoy_tests/: CMakeLists.txt  package.xml  test_config.hh.in
buoy_tests/hooks/: buoy_tests.dsv.in
buoy_tests/launch/: eh_solver.launch.py  eh_solver_select.launch.py  eh_windtarget.launch.py  eh_windtarget_select.launch.py  experiment_comparison.launch.py  experiment_comparison_select.launch.py  incident_wave.launch.py  incident_wave_select.launch.py  no_inputs_py.launch.py  no_inputs_ros_feedback.launch.py  pc_bias_damping_ros_feedback_py.launch.py  pc_commands_ros_feedback.launch.py  pc_commands_ros_feedback_py.launch.py  pto_experiment_comparison.launch.py  run_server.launch.py  sc_commands_ros_feedback.launch.py  sc_commands_ros_feedback_py.launch.py  sc_pump_ros_feedback_py.launch.py  sc_valve_ros_feedback_py.launch.py  wave_body_interactions.launch.py  wave_body_interactions_heaveonly.launch.py  wave_body_interactions_pitchonly.launch.py
buoy_tests/srv/: RunServer.srv
buoy_tests/test_inputdata/: 2021.07.26T10.51.44.exp  2022.01.28T16.46.31.exp  2022.01.28T16.46.31.tst  2022.01.28T16.46.31.txt  2022.01.28T16.46.31_new.exp  2022.12.21T15.44.24_VentedSpring.exp  EXP_2022.01.28T16.46.31.txt  FrictionIDMovesWithBiasCurr.exp  FrictionIDMovesWithBiasCurr.tst  PositionBasedSineMoves_Scale.5.txt  PositionBasedSineMoves_Scale1.4.txt  PositionBasedSineMoves_Scale1.txt  SpringTestInputFileList.txt  TestInputFileList.txt
buoy_tests/testing_utils/: __init__.py  utils.py
buoy_tests/tests/: eh_solver.cpp  eh_windtarget.cpp  experiment_comparison.cpp  fixture_server.cpp  fixture_server_sinusoidal_piston.cpp  incident_wave.cpp  mooring_drift.cpp  mooring_force.cpp  no_inputs.cpp  no_inputs.py  no_inputs_ros_feedback.cpp  pc_commands_ros_feedback.cpp  pto_experiment_comparison.cpp  sc_commands_ros_feedback.cpp  spring_experiment_comparison.cpp  test_fixture.py  test_pto_friction.cpp  wave_body_interactions.cpp  wave_body_interactions_heaveonly.cpp  wave_body_interactions_pitchonly.cpp
buoy_tests/worlds/: PTO_TestMachine.sdf  Spring_TestMachine.sdf  TestMachine.sdf  pto_experiment_comparison_TEST.sdf  singlefloatingbody_heave.sdf  singlefloatingbody_pitch.sdf
splinter/: CMakeLists.txt  README.md  cleanup.sh  package.xml
splinter/src/: splinter1d.cpp  splinter2d.cpp
(+71 files in other folders)
