<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buoy_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation plugins and worlds for buoy.</description>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>
  <license>Apache 2.0</license>
  <author>Louise Poubel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>buoy_description</depend>
  <depend>buoy_interfaces</depend>
  <depend>gz-sim7</depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>rviz2</depend>
  <depend>sdformat_urdf</depend>
  <depend>simple_interp</depend>
  <depend>gnuplot-iostream</depend>
  <depend>libfshydrodynamics</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
