<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buoy_tests</name>
  <version>0.0.0</version>
  <description>Tests for buoy simulation.</description>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>
  <license>Apache 2.0</license>
  <author>Louise Poubel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_index_cpp</test_depend>
  <test_depend>buoy_api_cpp</test_depend>
  <test_depend>buoy_api_py</test_depend>
  <test_depend>buoy_gazebo</test_depend>
  <test_depend>buoy_interfaces</test_depend>

  <test_depend>rclcpp</test_depend>
  <test_depend>rclpy</test_depend>

  <test_depend>splinter_ros</test_depend>
  <test_depend>libgnuplot-iostream-dev</test_depend>
  <test_depend>python3-ignition-gazebo6</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gnuplot-iostream</test_depend>

  <test_depend>rosidl_default_runtime</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
